--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass": "^1.26.11"
   },
   "devDependencies": {
-    "cssnano": "^4.1.10"
+    "cssnano": "^4.1.10",
+    "parcel": "^1.12.4"
   }
 }
